<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/login_title"
        android:textColor="@color/white_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_user_field"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/login_user_text"
        android:inputType="text"
        android:textColor="@color/white_text"
        android:textColorHint="#5C8E8D8D"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/login_password_field"
        android:layout_width="210dp"
        android:layout_height="50dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/login_password_text"
        android:inputType="textPassword"
        android:textColor="@color/white_text"
        android:textColorHint="#5C8E8D8D"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_user_field" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_forgetpassword_text"
        android:textSize="9sp"
        app:layout_constraintEnd_toEndOf="@+id/login_password_field"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="@+id/login_password_field"
        app:layout_constraintTop_toBottomOf="@+id/login_password_field" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/login_login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/white"

        android:text="@string/login_register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


</androidx.constraintlayout.widget.ConstraintLayout>